# pizza-cdn

./: .gitignore  README.md  pyproject.toml  upgrade_to_8.py
pizza/: __init__.py  index.html  responses.py
pizza/frontend/: docs.html  index.html
pizza/frontend/assets/: main.css
